src/objects/Building__c.object
<CustomObject>
    <fields>
        <fullName>Accessible_bathroom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accessible bathroom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accessible_elevators__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accessible elevators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Cost_of_Parking_Monthly__c</fullName>
        <description>Additional Cost of Parking if there&apos;s a monthly fee separate from rent.</description>
        <inlineHelpText>Additional Cost of Parking if there&apos;s a monthly fee separate from rent.</inlineHelpText>
        <label>Additional Cost of Parking Monthly</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Age_Threshold_for_Children__c</fullName>
        <description>Age Threshold Under Which Children Don&apos;t Count Toward Occupancy.</description>
        <inlineHelpText>Age Threshold Under Which Children Don&apos;t Count Toward Occupancy.</inlineHelpText>
        <label>Age Threshold For Children</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amenity_Test__c</fullName>
        <label>Amenity Test</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gas Stove</fullName>
                </value>
                <value>
                    <fullName>Microwave</fullName>
                </value>
                <value>
                    <fullName>Bike Parking</fullName>
                </value>
                <value>
                    <fullName>Wifi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bike_Parking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bike Parking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_City__c</fullName>
        <defaultValue>&quot;San Francisco&quot;</defaultValue>
        <description>City in which the Property is located - defaults to San Francisco</description>
        <inlineHelpText>City in which the Property is located - defaults to San Francisco</inlineHelpText>
        <label>Building City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_ST_Address_Planning_Approval__c</fullName>
        <description>The Building Street Address during planning approval</description>
        <inlineHelpText>The Building Street Address during planning approval</inlineHelpText>
        <label>Building St Address Planning Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Building Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_State__c</fullName>
        <defaultValue>&quot;CA&quot;</defaultValue>
        <description>State the property is in. Defaults to CA</description>
        <inlineHelpText>State the property is in. Defaults to CA</inlineHelpText>
        <label>Building State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Street_Address__c</fullName>
        <description>Street Number and Street Name (i.e. 1000 South Market St)</description>
        <inlineHelpText>Street Number and Street Name (i.e. 1000 South Market St)</inlineHelpText>
        <label>Building Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Type__c</fullName>
        <description>Type of Builiding. May be decremented in future.</description>
        <inlineHelpText>Type of Building such as condo/sfh/apartment. May be decremented in future.</inlineHelpText>
        <label>Building Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Co-op</fullName>
                </value>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Web_Site__c</fullName>
        <label>Building Web Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Building_Wi_Fi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Building Wi-Fi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Zip_Code_Planning_Approval__c</fullName>
        <description>The Property Zip Code During the Planning Approval Process.</description>
        <inlineHelpText>The Property Zip Code During the Planning Approval Process.</inlineHelpText>
        <label>Building Zip Code Planning Approval</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Zip_Code__c</fullName>
        <description>Zip Code for the Property.</description>
        <inlineHelpText>Zip Code for the Property.</inlineHelpText>
        <label>Building Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Central_Air_Conditioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Central Air Conditioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Central_Heater__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Central Heater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condo_Mapped_by_Dept_of_Real_Estate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are the units condo mapped (i.e. subdivided) through the department of Real Estate?</description>
        <inlineHelpText>Are the units condo mapped (i.e. subdivided) through the department of Real Estate?</inlineHelpText>
        <label>Condo Mapped by Dept. of Real Estate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_to_Ownership_Units_Explain__c</fullName>
        <description>Conversion to Ownership Units - Please Explain</description>
        <inlineHelpText>Conversion to Ownership Units - Please Explain</inlineHelpText>
        <label>Conversion to Ownership Units- Explain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costs_Not_Included__c</fullName>
        <label>Costs Not Included</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Building_Permit_Issuance__c</fullName>
        <description>Date Building Permit Issued</description>
        <inlineHelpText>Date Building Permit Issued</inlineHelpText>
        <label>Date of Building Permit Issuance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact from the Developer for the building.</description>
        <inlineHelpText>Contact from the Developer for the building.</inlineHelpText>
        <label>Developer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Buildings (Developer Contact)</relationshipLabel>
        <relationshipName>Buildings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Developer for the Building.</description>
        <inlineHelpText>Developer for the Building.</inlineHelpText>
        <label>Developer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Development__c</fullName>
        <description>Development for the property</description>
        <inlineHelpText>Development for the property</inlineHelpText>
        <label>Development</label>
        <referenceTo>Development__c</referenceTo>
        <relationshipName>Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dishwasher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dishwasher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doorperson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doorperson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electric_Fireplace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electric Fireplace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electric_Stove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electric Stove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elevator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elevator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_COO_Actual_Issue_Date__c</fullName>
        <description>Date the Final COO was issued</description>
        <inlineHelpText>Date the Final COO was issued</inlineHelpText>
        <label>Final COO Actual Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_COO_Expected_Issue_Date__c</fullName>
        <description>Date the Final COO is expected to be issued</description>
        <inlineHelpText>Date the Final COO is expected to be issued</inlineHelpText>
        <label>Final COO Expected Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fitness_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fitness Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gas_Stove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gas Stove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grab_bars__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grab bars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intend_to_Convert_to_Ownership_Units__c</fullName>
        <description>Do you intend to convert to ownership units in the future?</description>
        <inlineHelpText>Do you intend to convert to ownership units in the future?</inlineHelpText>
        <label>Intend to Convert to Ownership Units?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internet_ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet-ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Leasing Agent for the Building.</description>
        <inlineHelpText>Leasing Agent for the Building.</inlineHelpText>
        <label>Leasing Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Buildings (Leasing Agent)</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leasing_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Leasing Company Responsible for the Building.</description>
        <inlineHelpText>Leasing Company Responsible for the Building.</inlineHelpText>
        <label>Leasing Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Buildings (Leasing Company)</relationshipLabel>
        <relationshipName>Buildings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_All_Sources_of_Government_Financing__c</fullName>
        <description>Please list all source of Government Financing the Building Receives.</description>
        <inlineHelpText>Please list all source of Government Financing the Building Receives.</inlineHelpText>
        <label>List_All_Sources_of_Government_Financing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CDLAC</fullName>
                </value>
                <value>
                    <fullName>TCAC</fullName>
                </value>
                <value>
                    <fullName>HUD Loan</fullName>
                </value>
                <value>
                    <fullName>Infill Grant</fullName>
                </value>
                <value>
                    <fullName>HCD</fullName>
                </value>
                <value>
                    <fullName>City Bond</fullName>
                </value>
                <value>
                    <fullName>Other (please provide in Other Field0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_waitlist_size__c</fullName>
        <description>Manually-entered number to indicate the maximum size of the waitlist for this building</description>
        <label>Maximum waitlist size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Microwave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microwave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_City_and_County_of_SF_Planner__c</fullName>
        <description>Name of the Assigned planner of the City and County of San Francisco</description>
        <inlineHelpText>Name of the Assigned planner of the City and County of San Francisco</inlineHelpText>
        <label>Name of City and County of SF Planner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <description>Neighborhood in which the property is located.</description>
        <inlineHelpText>Neighborhood in which the property is located.</inlineHelpText>
        <label>Neighborhood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bayview</fullName>
                </value>
                <value>
                    <fullName>Bernal Heights</fullName>
                </value>
                <value>
                    <fullName>Castro/Upper Market</fullName>
                </value>
                <value>
                    <fullName>Chinatown</fullName>
                </value>
                <value>
                    <fullName>Civic Center</fullName>
                </value>
                <value>
                    <fullName>Crocker Amazon</fullName>
                </value>
                <value>
                    <fullName>Diamond Heights</fullName>
                </value>
                <value>
                    <fullName>Embarcadero</fullName>
                </value>
                <value>
                    <fullName>Excelsior</fullName>
                </value>
                <value>
                    <fullName>Financial District</fullName>
                </value>
                <value>
                    <fullName>Glen Park</fullName>
                </value>
                <value>
                    <fullName>Golden Gate Park</fullName>
                </value>
                <value>
                    <fullName>Haight Ashbury</fullName>
                </value>
                <value>
                    <fullName>Hayes Valley</fullName>
                </value>
                <value>
                    <fullName>Inner Richmond</fullName>
                </value>
                <value>
                    <fullName>Inner Sunset</fullName>
                </value>
                <value>
                    <fullName>Lakeshore</fullName>
                </value>
                <value>
                    <fullName>Marina</fullName>
                </value>
                <value>
                    <fullName>Mission</fullName>
                </value>
                <value>
                    <fullName>Nob Hill</fullName>
                </value>
                <value>
                    <fullName>Noe Valley</fullName>
                </value>
                <value>
                    <fullName>North Beach</fullName>
                </value>
                <value>
                    <fullName>Ocean View</fullName>
                </value>
                <value>
                    <fullName>Outer Mission</fullName>
                </value>
                <value>
                    <fullName>Outer Richmond</fullName>
                </value>
                <value>
                    <fullName>Outer Sunset</fullName>
                </value>
                <value>
                    <fullName>Pacific Heights</fullName>
                </value>
                <value>
                    <fullName>Parkside</fullName>
                </value>
                <value>
                    <fullName>Potrero Hill</fullName>
                </value>
                <value>
                    <fullName>Presidio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_or_Existing__c</fullName>
        <description>Is the unit new or existing?</description>
        <inlineHelpText>Is the unit new or existing?</inlineHelpText>
        <label>New or Existing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notice_of_Special_Restrictions_NSR_Doc__c</fullName>
        <description>NSR Document Number for the building.</description>
        <inlineHelpText>NSR Document Number for the building.</inlineHelpText>
        <label>Notice of Special Restrictions (NSR) Doc</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_people_currently_on_waitlist__c</fullName>
        <description>Manually-entered number to indicate how many people are currently on this waitlist</description>
        <inlineHelpText>How many people are currently on the waitlist?</inlineHelpText>
        <label>Number of people currently on waitlist</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_total_units__c</fullName>
        <description>All units within a building.</description>
        <label>Number of total units</label>
        <summaryForeignKey>Unit__c.Property__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_waitlist_openings__c</fullName>
        <description>Captures how many available spots are currently on this waitlist, by using the entered number of people on the waitlist and the maximum size</description>
        <formula>Maximum_waitlist_size__c -  Number_of_people_currently_on_waitlist__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Maximum waitlist size - number of people currently on waitlist</inlineHelpText>
        <label>Number of waitlist openings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Site_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On-Site Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Properties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Feature_11__c</fullName>
        <label>Other Feature 11</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Feature_12__c</fullName>
        <label>Other Feature 12</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Feature_13__c</fullName>
        <label>Other Feature 13</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Feature__c</fullName>
        <label>Other Feature 10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Fees_and_Building_Rules__c</fullName>
        <description>Other Fees and Building Rules</description>
        <inlineHelpText>Other Fees and Building Rules</inlineHelpText>
        <label>Other Fees and Building Rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Source_of_Government_Financing__c</fullName>
        <description>Please list other source of Government Financing.</description>
        <inlineHelpText>Please list other source of Government Financing.</inlineHelpText>
        <label>Other Source of Government Financing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <description>Is there parking available and if so, does it have an additional fee.</description>
        <inlineHelpText>Is there parking available and if so, does it have an additional fee.</inlineHelpText>
        <label>Parking?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parking Not Available</fullName>
                </value>
                <value>
                    <fullName>One Parking Space per Unit Available for Additional Monthly Fee</fullName>
                </value>
                <value>
                    <fullName>Each unit includes one parking space as part of the rent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pet_Policy__c</fullName>
        <label>Pet Policy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pet_friendly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pet friendly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Photo_URL__c</fullName>
        <description>URL that points to photo for the property</description>
        <inlineHelpText>URL that points to photo for the property</inlineHelpText>
        <label>Photo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Planning_Motion_Number__c</fullName>
        <description>Number for the Planning Motion corresponding to the building.</description>
        <inlineHelpText>Number for the Planning Motion corresponding to the building.</inlineHelpText>
        <label>Planning Motion Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_wired_for_cable_TV_and_phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-wired for cable TV and phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Procedures_Manual__c</fullName>
        <defaultValue>&quot;All BMR renters must review and acknowledge the Inclusionary Affordable Housing Program Monitoring and Procedures Manual 2013 that governs this property upon the signing of a lease for a BMR unit.&quot; &amp; BR()&amp; BR()&amp;

&quot;The 2013 Inclusionary Affordable Housing Program Monitoring and Procedures Manual can be found here: http://sf-moh.org/index.aspx?page=295&quot;</defaultValue>
        <description>Procedures Manual for BMR Rental.</description>
        <inlineHelpText>Procedures Manual for BMR Rental.</inlineHelpText>
        <label>Procedures Manual</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Development__r.Project_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MOHCD Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <defaultValue>&quot;San Francisco&quot;</defaultValue>
        <description>City in which the Property is located - defaults to San Francisco</description>
        <inlineHelpText>City in which the Property is located - defaults to San Francisco</inlineHelpText>
        <label>Property City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <description>Name of Building</description>
        <inlineHelpText>Name of Building</inlineHelpText>
        <label>Building Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Property_Record_ID__c</fullName>
        <description>Confirm if it can be decremented: Used as a master property record ID to associate units with their original property (this way when units are resold or re-rented a new property record can be created with new pricing/marketing plans that will affect only the resale re-rental units while the units have a way of maintaining their association with the original property). This will make setting up reports of all units in a property easier even if units are associated with new property records as they are resold or re-rented.</description>
        <displayFormat>PROP-{YY}-{00000}</displayFormat>
        <label>Property Record ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <defaultValue>&quot;CA&quot;</defaultValue>
        <description>State the property is in. Defaults to CA</description>
        <inlineHelpText>State the property is in. Defaults to CA</inlineHelpText>
        <label>Property State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street_Address__c</fullName>
        <description>Street Number and Street Name (i.e. 1000 South Market St)</description>
        <inlineHelpText>Street Number and Street Name (i.e. 1000 South Market St)</inlineHelpText>
        <label>Property Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <description>Type of Property. May be decremented in future.</description>
        <inlineHelpText>Type of Property such as condo/sfh/apartment. May be decremented in future.</inlineHelpText>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Co-op</fullName>
                </value>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Web_Site__c</fullName>
        <label>Property Web Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Property_Zip_Code__c</fullName>
        <description>Zip Code for the Property.</description>
        <inlineHelpText>Zip Code for the Property.</inlineHelpText>
        <label>Property Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_of_BRs__c</fullName>
        <description>Range of number bedrooms in the property. May be updated to be formula or other automation.</description>
        <inlineHelpText>Range of Number of bedrooms in property such as 2-4BR.</inlineHelpText>
        <label>Range of # BRs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_of_Bathrooms__c</fullName>
        <description>Range of the number of Bathrooms in a property - not listing - . May later be populated with automation</description>
        <inlineHelpText>Range of the number of Bathrooms in units within the property - such as 2-4BA</inlineHelpText>
        <label>Range of # Bathrooms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_of_Sq_Feet_per_unit__c</fullName>
        <description>Range of Square Feet per unit for the property. may later be populated with an automation.</description>
        <inlineHelpText>Range of Square Feet per unit for the property.</inlineHelpText>
        <label>Range of Sq Feet per unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserved_Community_Requirement__c</fullName>
        <inlineHelpText>Reserved Community Requirement</inlineHelpText>
        <label>Reserved Community Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entire household</fullName>
                </value>
                <value>
                    <fullName>One household member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reserved_community_maximum_age__c</fullName>
        <description>Maximum age allowed to live in this restricted community.</description>
        <inlineHelpText>Enter the maximum age an applicant can be in order to live in this restricted community type.</inlineHelpText>
        <label>Reserved unit(s) maximum age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved_community_minimum_age__c</fullName>
        <description>Minimum age required to live in this restricted community.</description>
        <inlineHelpText>Enter the minimum age an applicant must be in order to live in this restricted community type.</inlineHelpText>
        <label>Reserved unit(s) minimum age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved_community_type__c</fullName>
        <description>Indicator that this building is restricted only to the group indicated here (as are all realted units).</description>
        <inlineHelpText>Select if this building is restricted to a certain group of people.</inlineHelpText>
        <label>Reserved community type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Veteran</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reserved_community_type_description__c</fullName>
        <description>The description of the related restriction type.</description>
        <inlineHelpText>Enter the description for the related restricted community type.</inlineHelpText>
        <label>Reserved community type description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Room_by_Room_Air_Conditioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Room-by-Room Air Conditioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room_by_Room_Heat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Room-by-Room Heat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_Laundry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared Laundry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smoking_Policy__c</fullName>
        <label>Smoking Policy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supportive_Services__c</fullName>
        <label>Supportive Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Veterans</fullName>
                </value>
                <value>
                    <fullName>Seniors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temporary_COO_Actual_Issuance_Date__c</fullName>
        <description>Date the Temporary COO was actually issued.</description>
        <inlineHelpText>Date the Temporary COO was actually issued.</inlineHelpText>
        <label>Temporary COO Actual Issuance Date</label>
        <type>Date</type>
    </fields>
</CustomObject>